[tool.poetry]
name = "just-start-broker"
version = "0.1.0"
description = ""
authors = ["Ali Ghahraei <aligf94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
requests = {version = "^2.28.1", optional = true}
xdg = "^5.1.1"

[tool.poetry.group.dev.dependencies]
poetryup = "^0.9.0"
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.3"}
ufmt = "^1.3.3"
flake8 = "^4.0.1"
mypy = "^0.971"
doit = "^0.36.0"

[tool.poetry.extras]
test = ["requests"]


[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = ['just_start_broker', 'tests']
omit = ['*/__main__.py']

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    'pragma: no cover',
    '@(abc\.)?abstractmethod',
    'pass',
    'if TYPE_CHECKING',
    'return NotImplemented',
]


[tool.mypy]
files = ['just_start_broker', 'tests', '*.py']
strict = true
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = 'nox.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'nox_poetry.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'doit.*'
ignore_missing_imports = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
